# focalh_data_transformer

./: .gitignore  CMakeLists.txt  README.md
data/: 200_5_analysis.root  200_5_analysis_corner.root  adsf.root
data/converted/: 200_5_generic.root  200_5_generic_corner.root
include/: definitions.h  focal_sim_reader.h  superimpose_events.h
scripts/: merge.cxx  random_merge.cxx  sim2gen.cxx  test_script.cxx  triangular_merge.cxx
src/: focal_sim_reader.cxx  superimpose_events.cxx
